[package]
name = "turbopark-rust"
version = "0.1.1"
edition = "2021"
description = "TurboPark, freely deployable and fast"
repository = "https://github.com/thclark/turbopark-rust"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
